--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,12 +1,12 @@
 /* Breakpoints */
-$mobileBP: "680px";
+$mobileBP : "680px";
 $desktopBP: "768px";
-
 /* Colors */
-$black: #000;
-$white: #FFF;
-$agray: #AAA;
-$bgray: #BBB;
-$cgray: #CCC;
-$dgray: #DDD;
-$egray: #EEE;
+$black    : #000;
+$white    : #FFF;
+$agray    : #AAA;
+$bgray    : #BBB;
+$cgray    : #CCC;
+$dgray    : #DDD;
+$egray    : #EEE;
+$yellow   : rgba(255, 255, 0, 1);
